<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="version">"Version 253"</string>

    <string name="add_fee">"Additional Fee:"</string>
    <string name="additional_comment1">"Additional Comment 1: "</string>
    <string name="additional_comment2">"Additional Comment 2: "</string> 
    <string name="additional_comment3">"Additional Comment 3: "</string>  
    <string name="ampersand">"&#38;"</string>
    <string name="atsign">"&#64;"</string>
    <string name="app_done">"  DONE  "</string>
    <string name="app_esc">"  ESC  ""</string>    
    <string name="app_name">Clancy Systems</string>
    <string name="begin">"   Begin   "</string>
    <string name="blank">"      "</string>
    <string name="block_of">"Block of     "</string>
    <string name="building_lot">"Building Lot:"</string>
    <string name="building_lot_two">"Lot Number"</string>
    <string name="building_lot_three">"Please Wait&#8230;"</string>
    <string name="call_clancy">"Call Clancy Systems if either"</string>   
    <string name="colorado">COLORADO</string>
	<string name="continue_message">"  Continue  "</string>    
    <string name="current_time">"Current Date/Time:"</string>
    <string name="comment">"Comment: "</string>
    <string name="count_tickets">"Count of Tickets: "</string>
    <string name="court_date">"Court Date:"</string>
    <string name="chalk_time">"Chalk Time: "</string>
    <string name="custom_date">"Date to Be Printed:"</string>
    <string name="custom_time">"Time to Be Printed:"</string>
    <string name="department">"Department: "</string>    
    <string name="email">"Daily Message:"</string>
    <string name="enter_badge">"Badge Number: "</string>
    <string name="enter_comment1">"Comment Line 1: "</string>    
    <string name="enter_comment2">"Comment Line 2: "</string>
    <string name="enter_comment3">"Comment Line 3: "</string>
    <string name="enter_officer">"Officer Name: "</string>
    <string name="forceupdate">"Sorry for the interruption, but in order to get the latest and greatest software the Clancy program needs to be updated. Please click the Update button below and you will taken to the Android Market. Simply click the Update button on that page. Finally, click Open once the update is complete."</string>  
    <string name="desc1">"Description 1"</string>  
    <string name="desc2">"Description 2"</string>
    <string name="desc3">"Description 3"</string>
    <string name="desc4">"Description 4"</string>
    <string name="direction">"STREET DIRECTION:"</string>
    <string name="displayed_here">"Displayed Here"</string>
    <string name="dollarsign">"&#36;"</string>
    <string name="done">"  Done  "</string>        
    <string name="empty_string_6">"      "</string>
    <string name="enter">"  Enter  "</string>
    <string name="enter_beat">"Beat:"</string> 
    <string name="enter_body">"Body:"</string>   
    <string name="enter_color">"Color:"</string>
    <string name="enter_crossstreet">"Cross Street: "</string>
    <string name="enter_number">"Street Number: "</string>
    <string name="enter_unit_number">"Unit Number: "</string>
    <string name="enter_meter">"Meter Number: "</string>       
    <string name="enter_password">"Enter Password:"</string>
    <string name="enter_state">"STATE:  "</string>
    <string name="enter_plate">"Enter License Plate:"</string>
    <string name="enter_temp_plate">"Temporary Plate Number:"</string>
    <string name="enter_street">"Street: "</string>    
    <string name="enter_lgstreet">"Location: "</string>    
    <string name="enter_vin">"Enter VIN:"</string>           
    <string name="exit">"    Exit     "</string>
    <string name="google_maps">"Map It"</string>
    <string name="go">"Go"</string>
    <string name="hello">Clancy Systems</string>
    <string name="hbox_checks">Honorbox Checks for</string>
    <string name="hbox_lot">Lot #</string>
    <string name="image_name">Empty</string>
    <string name="image_width">"012345678901234567"</string>
    <string name="incorrect">"is incorrect. 303&#8211;759&#8211;4276"</string>  
    <string name="issued">"Issued: 0"</string>   
    <string name="cite_key">"Key #: "</string>      
    <string name="last">"Last: "</string>
    <string name="last_four">"Last Four of VIN: "</string>
    <string name="last_four_options">" (C,I,N,D)"</string>
    <string name="lat_short">"Lat: "</string>      
    <string name="liccolor">"Plate Color:  "</string>
    <string name="long_short">"Long: "</string>
    <string name="main_line_one">"All rights reserved."</string>
    <string name="main_line_two">"Clancy Systems International, Inc."</string>
    <string name="main_line_three">"Copyright &#169; 1996&#8211;2015"</string>
    <string name="main_line_four">"Get Latest Version"</string>
    <string name="main_line_five"></string>
    <string name="main_line_six">"Refresh Data Tables"</string>
    <string name="make">"Make:  "</string>
	<string name="message">"Message"</string>
	<string name="messagechalk">"Chalk: "</string>   
	<string name="messagecurrent">"Current: "</string>
	<string name="messagetime">"TIME"</string>     
	<string name="messagenew">"NEW"</string>           
	<string name="n">N</string> 
    <string name="next">"   Next   "</string>   
    <string name="next_short">Next:</string>
    <string name="newplatetype">Plate Type:</string>
    <string name="numbersign">"&#35;"</string>   
    <string name="none">"  None  "</string>
    <string name="north">"NORTH"</string>
    <string name="offender">"Offender/Messages"</string>
    <string name="ordinance">"Ordinance"</string>
    <string name="permit">"Permit: "</string>
    <string name="plate">"Plate Number"</string>
    <string name="plate_month">"Plate Month:  "</string>
	<string name="plate_year">"Plate Year:  "</string>
	<string name="please_wait">"Please Wait&#8230;"</string>
	<string name="plusplus">" Enter+ "</string>
	<string name="previous">Previous</string>
	<string name="refresh_repeat">Refreshing Repeat</string>
	<string name="refresh_data">Refreshing Data&#8230;</string>	
	<string name="retrieving_previous">Retrieving Previous</string>
	<string name="retry">"  Retry  "</string>
	<string name="rates">"Rates"</string>
	<string name="saving">"Printing Citation&#8230;"</string>
	<string name="select_function">Select Function</string>
	<string name="secondary">Extended Keyboard</string>
	<string name="select_lot">"Select Lot: "</string>
	<string name="select_pics">"Select pictures to print by tapping on the image."</string>
	<string name="speak">Speak</string>
	<string name="settings">Settings</string>
	<string name="shortcut">"Shortcut Keyboard"</string>
	<string name="skip">"  Skip  "</string>
	<string name="space_number">"Space Number:"</string>
	<string name="spanish_one">"(S)panish or (E)nglish"</string>
	<string name="spanish_two">"Prompts? (S/E)"</string>
	<string name="stem">"Tire Stem Position: (1-12)"</string>
	<string name="sticker">"Sticker Date:"</string>
	<string name="streettype">"Steet Type:"</string>
	<string name="store_last">"Store Last"</string>
	<string name="tag">"Tag #: "</string>
	<string name="talk">"   Talk   "</string>
	<string name="take_picture">"  Take Picture?  "</string>
	<string name="temp_expire_date">"Temporary Expires:"</string>
	<string name="try_again">" Try Again "</string>
	<string name="ticket_issuance">Ticket Issuance</string>
	<string name="time">Time:</string>
    <string name="twentytwelve">2012</string>
    <string name="typesignaturehere">Type Signature Here</string>
    <string name="update">Update</string>
    <string name="unit">Unit Number</string>
    <string name="uploading">"Uploading Data&#8230;"</string>
    <string name="violation">"Violation: "</string>
    <string name="violcode">001</string>
    <string name="xxxcomment">Type XXX for custom</string>
    <string name="y">Y</string>
    <string name="write_ticket">Write a ticket?</string>
    <string name="wifion">Wi-Fi is turned ON! When Wi-Fi is turned ON it overrides the 4G/3G network. This can cause the program to hang after pressing the Begin button and can prevent the citations from uploading. Another issue is that the battery life will be diminished because as you are moving around the unit will be constantly trying to find open Wi-Fi networks. Please turn OFF the Wi-Fi to prevent this warning from appearing. </string>

    <string name="external_dir">GetSignature</string>

    <string name="create_route">"Create Route"</string>
    <string name="create_route_title">"Enter Route Name/Number"</string>
    <string name="delete_routes">"Delete Routes"</string>
    <string name="select_function_label">"Survey Program"</string>
    <string name="survey">"Survey"</string>
    <string name="upload_files">"Upload Files"</string>
    <string name="btn_next">"Next"</string>

    <string name="enter_route">"Enter Route"</string>
    <string name="enter_pass_data_title">"Enter Pass Data"</string>
    <string name="enter_meter_paid">"YNOBH"</string>

    <string name="street">"Street:"</string>
    <string name="space_meter">"Space/Meter:"</string>
    <string name="prior_plate">"Prior Plate:"</string>
    <string name="state">"State:"</string>
    <string name="meter_paid">"Meter Paid?"</string>

    <string-array name="state_array">
        <item>AL - Alabama</item>
        <item>AK - Alaska</item>
        <item>AZ - Arizona</item>
        <item>AR - Arkansas</item>
        <item>CA - California</item>
        <item>CO - Colorado</item>
        <item>CT - Connecticut</item>
        <item>DE - Delaware</item>
        <item>FL - Florida</item>
        <item>GA - Georgia</item>
        <item>HI - Hawaii</item>
        <item>ID - Idaho</item>
        <item>IL - Illinois</item>
        <item>IN - Indiana</item>
        <item>IA - Iowa</item>
        <item>KS - Kansas</item>
        <item>KY - Kentucky</item>
        <item>LA - Louisiana</item>
        <item>ME - Maine</item>
        <item>MD - Maryland</item>
        <item>MA - Massachusetts</item>
        <item>MI - Michigan</item>
        <item>MN - Minnesota</item>
        <item>MS - Mississippi</item>
        <item>MO - Missouri</item>
        <item>MT - Montana</item>
        <item>NE - Nebraska</item>
        <item>NV - Nevada</item>
        <item>NH - New Hampshire</item>
        <item>NJ - New Jersey</item>
        <item>NM - New Mexico</item>
        <item>NY - New York</item>
        <item>NC - N. Carolina</item>
        <item>ND - N. Dakota</item>
        <item>OH - Ohio</item>
        <item>OK - Oklahoma</item>
        <item>OR - Oregon</item>
        <item>PA - Pennsylvania</item>
        <item>RI - Rhode Island</item>
        <item>SC - S. Carolina</item>
        <item>SD - S. Dakota</item>
        <item>TN - Tennessee</item>
        <item>TX - Texas</item>
        <item>UT - Utah</item>
        <item>VT - Vermont</item>
        <item>VA - Virginia</item>
        <item>WA - Washington</item>
        <item>WV - W. Virginia</item>
        <item>WI - Wisconsin</item>
        <item>WY - Wyoming</item>
    </string-array>
</resources>

