<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget37"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff" >

    <Button
        android:id="@+id/buttonESC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="4dp"
        android:text="@string/app_esc"
        android:textSize="20sp"
        android:textStyle="bold" >
    </Button>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonESC"
        android:layout_alignLeft="@+id/textViewMsg1"
        android:layout_alignRight="@+id/TextImageWidth"
        android:layout_alignTop="@+id/buttonESC"
        android:contentDescription="@string/image_name"
        android:src="@drawable/clancy1" >
    </ImageView>

    <TextView
        android:id="@+id/textViewMsg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="10dp"
        android:text="@string/retrieving_previous"
        android:textColor="#ff000000"
        android:textSize="24sp"
        android:textStyle="bold" >
    </TextView>

    <android.inputmethodservice.KeyboardView
        android:id="@+id/keyboardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:keyBackground="@drawable/key_back1"
        android:keyTextColor="#ff000000"
        android:keyTextSize="30sp"
        android:shadowColor="#ffFFFFFF" />

    <TextView
        android:id="@+id/TextImageWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/image_width"
        android:textColor="#ff000000"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textViewMsg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewMsg1"
        android:text="@string/hbox_checks"
        android:textColor="#ff000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonRetry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewMsg2"
        android:layout_marginTop="59dp"
        android:text="@string/retry"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewLotNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewMsg2"
        android:text="@string/hbox_lot"
        android:textColor="#ff000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonRetry"
        android:layout_centerHorizontal="true" />

</RelativeLayout>