<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget37"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffffff"
>

    <Button
        android:layout_marginTop="4dp" 
        android:id="@+id/buttonESC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/app_esc"
        android:textSize="20sp"
        android:textStyle="bold" >
    </Button>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonESC"
        android:layout_alignRight="@+id/TextImageWidth"
        android:layout_alignTop="@+id/buttonESC"
        android:contentDescription="@string/image_name"
        android:src="@drawable/clancy1" >

    </ImageView>

    <TextView
        android:id="@+id/TextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_below="@+id/imageView1"
        android:text="@string/space_number"
        android:textColor="#ff000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView1"
        android:layout_below="@+id/TextView1"
        android:text="@string/space_number"
        android:textColor="#ff000000"
        android:textSize="24sp"
        android:textStyle="bold" />
    
    <TextView
        android:id="@+id/TextImageWidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/image_width"
        android:textColor="#ff000000"
        android:textSize="18sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/buttonEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView2"
        android:layout_marginTop="76dp"
        android:text="@string/enter"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>